--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-notifyjs": "^0.4.3",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0"
   },
@@ -21,10 +24,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "prettier": "^2.4.1",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.1",
